--- a/package.json
+++ b/package.json
@@ -21,13 +21,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-client": "react-scripts start",
+    "build-client": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "install-client": "npm install",
-    "build-client": "npm run build",
-    "start-client": "npm run start"
+    "install-client": "npm install"
   },
   "eslintConfig": {
     "extends": [
