--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build-client": "react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "install-client": "npm install"
+    "install-client": "npm install",
+    "build-client": "npm run build",
+    "start-client": "npm run start"
   },
   "eslintConfig": {
     "extends": [
