--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yocto-queue": "^1.2.0"
   },
   "scripts": {
