--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.6.3",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
     "env": "^0.0.2",
     "jwt-decode": "^3.1.2",
